content types organization and footer changes
Moves content types under homepage and inner/main content types for two column layout. Also rearranges footer logo and contact information.

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -29,6 +29,8 @@
                     <li><a href="/studenthub">Current Students</a></li>
                     <li class="hide-pipe">|</li>
                     <li><a href="/facstaff">Faculty &amp; Staff</a></li>
+                    <li class="hide-pipe">|</li>
+                    <li><a href="/employers">Employers</a></li>
                  </ul>
               </li>
                <li class="dropdown collapse navbar-collapse">
@@ -124,9 +126,6 @@
                <button type="submit" class="fa fa-search submit-desktop" aria-label="submit search"></button>
             </form>
          </div>
-         <!-- <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-         </div> -->
       </div>
    </div>
 </div>
