--- a/development/terminalfour/src/html/includes/site-header.html
+++ b/development/terminalfour/src/html/includes/site-header.html
@@ -1,15 +1,6 @@
-<!-- BEGINS BREADCRUMBS + SITEHEADER -->
-<section id="site-header">
-        <!-- SITE HEADER -->
-
-      <div class="col-xs-12 siteheader">
-            <h1>Newsroom</h1>
-            <h1><t4 type='navigation' id='101' /></h1>
-      <!-- BREADCRUMBS -->
-       <ul class="breadcrumb">
-           <a href="/">MSU Denver Home</a>&nbsp;/&nbsp;<a href="/newsroom/">Newsroom</a>&nbsp;/&nbsp;<a href="/newsroom/news/">All News/Archive</a>&nbsp;/&nbsp;<a href="/newsroom/news/2016/">2016</a>&nbsp;/&nbsp;May
-           <t4 type='navigation' id='89' />
-       </ul>
-      </div>
-</section>
+  <!-- SITE HEADER -->
+    <div class="col-xs-12 siteheader" id="site-header">
+          <h1>Newsroom</h1>
+          <h1><t4 type='navigation' id='101' /></h1>
+    </div>
 <!-- ENDS BREADCRUMBS + SITEHEADER -->
