--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -103,9 +103,9 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
 }
 h1 {
-  color: #fff;
-  font-size: 2.25rem;
-  font-weight: 700;
+  color: #00447c;
+  font-size: 3rem;
+  margin: 20px 0;
 }
 
 
