--- a/development/terminalfour/src/sass/ContentTypes/_well.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_well.scss
@@ -1,7 +1,7 @@
 .well {
-  width: 100%;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
+  // width: 100%;
+  // background-color: #f5f5f5;
+  // border: 1px solid #e3e3e3;
   display: inline-block;
   margin-bottom: 20px;
   padding: 1.2575em;
