--- a/www-root/includes/content-types-main/content.html
+++ b/www-root/includes/content-types-main/content.html
@@ -1,21 +1,4 @@
-<a name="d.en.103378"></a>
-<div class="col-xs-12">
-<div class="content-inner">
-  <h2>Welcome To The WCMS Quick Fix Workshop!</h2>
-  <h3>Lets get some stuff done today.</h3>
-    <p>&nbsp;</p>
-<p><strong>Welcome Students</strong> to MSU Denver's Openhouse&zwnj;Welcome Students to MSU Denver's Openhouse&zwnj;&zwnj;Croissant pastry apple pie chocolate bar cheesecake chocolate brownie. Fruitcake cheesecake lollipop donut cupcake. <a href="/media/sampleassets/pdf-sample.pdf" target="_blank" data-toggle="tooltip" data-placement="top" title="PDF 7 KB">Sample PDF</a>&nbsp;jujubes dessert macaroon oat cake carrot cake gummies. Powder muffin cotton candy croissant.<a href="/media/sampleassets/pdf-sample.pdf" target="_blank" data-toggle="tooltip" data-placement="top" title="PDF 7 KB">Sample PDF</a></p>
-<p><a href="https://msudenver.edu/media/content/officeoftheregistrar/ClassAdjustmentForm.pdf" target="_blank" data-toggle="tooltip" data-placement="top" title="PDF 297 KB">Class Adjustment Form</a></p>
-<p><a href="/media/sampleassets/pdf-sample.pdf" target="_blank" data-toggle="tooltip" data-placement="top" title="PDF 7 KB">This document sample</a></p>
-<p>Souffl&eacute; jelly jujubes croissant brownie brownie tootsie roll marzipan. Jelly-o sweet roll jelly croissant. Sweet muffin toffee apple pie macaroon tart fruitcake. Tiramisu sweet roll chocolate cake caramels sweet roll fruitcake chupa chups cake.</p>
-<p>Croissant pastry apple pie chocolate bar cheesecake chocolate brownie. Fruitcake cheesecake lollipop donut cupcake. Macaroon pudding jujubes dessert macaroon oat cake carrot cake gummies. Powder muffin cotton candy croissant.</p>
-<p>Souffl&eacute; jelly jujubes croissant brownie brownie tootsie roll marzipan. Jelly-o sweet roll jelly croissant. Sweet muffin toffee apple pie macaroon tart fruitcake. Tiramisu sweet roll chocolate cake caramels sweet roll fruitcake chupa chups cake.</p>
-<p>Croissant pastry apple pie chocolate bar cheesecake chocolate brownie. Fruitcake cheesecake lollipop donut cupcake. Macaroon pudding jujubes dessert macaroon oat cake carrot cake gummies. Powder muffin cotton candy croissant.</p>
-<p>&nbsp;</p>
-<p>Denver</p>
-    <br>
-</div>
-</div>
+
 <!--  --><a href="/tst/wcmstestsite/blog-entry-content-type.shtml">
 <div class="panel">
     <h4 class="promo_date pull-right badge">
@@ -187,7 +170,9 @@
           <section class='expert-photo'> <img class="img-responsive" src="https://msudenver.edu/media/content/newsroom/stories/irs1.jpg" alt="Metro State accounting students used walkie-talkies in an on-campus exercise presented by the Adrian Project to explain duties of an undercover team. Photo by Jason Braddock." style="   " /> </section>
         </div>
     </div>
-</div></div><style>
+</div></div>
+
+<style>
         #fb-root {
                 display: none;
                 }
@@ -207,10 +192,7 @@
     }(document, 'script', 'facebook-jssdk'));</script>
 
 
-<!--Facebook Feed-->
-<div style="max-width: 600px;">
-<div class="fb-like-box" data-href="http://www.facebook.com/msudenver" data-width="500" data-show-faces="false" data-stream="true" data-show-border="true" data-header="true"></div>
-</div> <!-- HiglightBox text/shtml -->
+
 <div class="col-xs-12">
 <div class="HighlightBox">
   <div class="HighlightBox-title">
@@ -456,73 +438,7 @@
   </a>
  </div>
 
-    <!--Slideshow Gallery Content Type-->
-
-<style>
-.carousel-inner {
-  height: 500px;
-  text-align: center;
-  }
-.carousel-inner >.item>img, .carousel-inner>.item>a>img {margin: 0 auto;}
-.carousel-caption { left: 0; right: 0; background: rgba(255,255,255,0.8); opacity: 0.2; text-shadow: none; font-size: 12pt; color: #202020; margin-bottom: 20px; }
-.carousel-caption:hover { opacity: 1; transition: opacity 0.5s; }
-.carousel-control.left { background: transparent; background-image: none; }
-.carousel-control.right { background: transparent; background-image: none; }
-.item > img {max-height: 495px; box-shadow: 0px 0px 20px #000; }
-
-span.fa.fa-caret-right, span.fa.fa-caret-left {
-    margin-top: -15px;
-    margin-left: -15px;
-    top: 50%;
-    position: absolute;
-    top: 50%;
-    z-index: 5;
-    display: inline-block;
-    color: rgba(255, 255, 255, 0.81);
-}
-
- .carousel-inner>.item>.thumbnail {
-    padding: 0 !important;
-    margin: 0;
-    border-radius: 0;
-    transition: 0s;
-    border: none;
-}
-
- figcaption.caption {
-    padding: 10px !important;
-    position: absolute;
-    bottom: 40px !important;
-    color: white !important;
-    text-align: center;
-    text-shadow: 0 1px 2px rgba(0,0,0,.6);
-    font-size: 16px;
-    background-color: rgba(0, 0, 0, 0.83);
-    width: 100%;
-}
-
-</style>
-
-<!--text/shtml-->
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
- <div id="109901" class="carousel slide">
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-        <div class='item active'>  <img class="img-responsive" src="https://msudenver.edu/media/content/newsroom/stories/miles_lg.jpg" alt="Ron Miles, professional musician and assistant professor of music, can often be found in the crowd at student performances, as he wants &quot;to see where they are trying to go&quot; with their music." style="   " />  </div>
-        <div class='item'> <img class="img-responsive" src="https://msudenver.edu/media/content/metrostateisrising/Exhibition-and-exterior-0908_11.jpg" alt="mscd center for the visual arts gallery shot" style="   " /> </div>
-        <div class='item'> <figure class="thumbnail" id="5211" style="max-width : 300px;" >
-<img class="img-responsive" src='https://msudenver.edu/media/content/marketingandcommunications/_MG_9716tn.jpg' alt='This image is from the Online Photo Library﻿'/>
-<figcaption class="caption">This image is from the Online Photo Library﻿</figcaption>
-</figure> </div>
-</div>
-    <!-- Controls -->
-    <a class="left carousel-control" href="#109901" data-slide="prev">
-        <span class="fa fa-caret-left fa-3x"></span>
-    </a>
-    <a class="right carousel-control" href="#109901" data-slide="next">
-        <span class="fa fa-caret-right fa-3x"></span>
-    </a>
-</div>
+  
   </div><div class="col-xs-12 story_preview clickable" data-href="/tst/wcmstestsite/story-content-type.shtml">
     <h4 class="promo_date pull-right badge">
         May 18, 2016
