--- a/development/terminalfour/src/sass/ContentTypes/_variables.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_variables.scss
@@ -27,25 +27,24 @@
 }
 .rowdyblue {
   background: #00447c;
-  color: #fff!important
+  color: #fff!important;
+  &:hover {
+    background: #003663;
+  }
 }
-.rowdyblue:hover {
-  background: #003663;
-  color: #fff!important
-}
+
 .rowdyred {
   background: #c50f3c;
-  color: #fff!important
+  color: #fff!important;
+  &:hover {
+    background: #ad0d35;
+  }
 }
-.rowdyred:hover {
-  background: #ad0d35;
-  color: #fff!important
-}
+
 .rowdygray {
   background: #717073;
-  color: #fff!important
-}
-.rowdygray:hover {
-  background: #646366;
-  color: #fff!important
+  color: #fff!important;
+  &:hover {
+    background: #646366;
+  }
 }
