--- a/www-root/includes/header.html
+++ b/www-root/includes/header.html
@@ -101,7 +101,8 @@
                <li id="nav-search" type="button">
                  <a href="#" data-toggle="modal" data-target="#searchModal">
                    <label for="nav-search" class="sr-only">Search MSU Denver dot e d u</label>
-                   <span class="search-button-text"><span class="fa fa-search search-desktop"></span> SEARCH</span>
+                   <span class="search-button-text"><span class="fa fa-search search-desktop"></span> <span
+                       class="search-text">SEARCH</span></span>
                  </a>
                </li>
                <li></li>
