--- a/development/terminalfour/src/sass/msu-partials/_homepage-at-a-glance.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-at-a-glance.scss
@@ -15,22 +15,23 @@
 }
 .at-a-glance-items {
     @include make-row();
-    padding-top: 32px;
-    padding-top: torem(32);
 }
 .at-a-glance-item {
     text-align: center;
+    display: flex;
+    align-items: center;
     @include make-xs-column(12);
-    margin-bottom: 24px;
-    margin-bottom: torem(24);
+    margin-bottom: torem(40);
 }
 /* At a glance items */
-.at-a-glance-img, .at-a-glance-text-wrap {
-    padding: 0 15px;
+.at-a-glance-img, 
+.at-a-glance-text-wrap {
     padding: 0 torem(15);
+    float: left;
  
 }
 .at-a-glance-img {
+    width: 40%;
     img { 
         @include img-responsive; 
         margin: 0 auto;
@@ -38,20 +39,22 @@
     }
 }
 
+.at-a-glance-text-wrap {
+    width: 60%;
+}
+
 .at-a-glance-stat {
     font-size: torem(45);
     font-weight: 400; 
     color: $msu-red; 
-    padding-bottom: torem(40);
     margin-bottom: 0;
 }
 .at-a-glance-text {
     font-size: torem(24);
     line-height: torem(30);
+    padding-bottom: torem(24);
     font-weight: 400;
     color: $gray-base;
-    padding-bottom: torem(70);
-    width: 60%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0;
@@ -59,13 +62,32 @@
 
 @media (min-width: $screen-sm-min) {
     .at-a-glance-item {
-        @include make-sm-column(4);   
+        @include make-sm-column(6);
+        display: block; 
+        margin-bottom: 0;
+    }
+    .at-a-glance-img {
+        display: flex;
+    }
+    .at-a-glance-img,
+    .at-a-glance-text-wrap {
+        float: none;
+        width: 100%;
+    }
+    .at-a-glance-text {
+        width: 60%;
+        padding-bottom: torem(70);
+    }
+}
+
+@media (min-width: $screen-md-min) {
+    .at-a-glance-item {
+      @include make-sm-column(4);
     }
 }
 
 @media (min-width: $screen-lg-min) {
     #homepage-at-a-glance {
-        padding: 50px percentage(1/$grid-columns);
-        padding: torem(50, $small-unit) percentage(1/$grid-columns);
+        padding: torem(50, $small-unit) percentage(1/$grid-columns) torem(60, $small-unit);
     }
 }
