--- a/development/terminalfour/src/sass/msu-partials/_homepage-community.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-community.scss
@@ -34,6 +34,6 @@
 }
 @media (min-width: $screen-md-min) {
     #homepage-community {
-        padding: torem(100, $small-unit) percentage(1/$grid-columns);
+        padding: torem(100, $small-unit) percentage(1/$grid-columns) torem(60, $small-unit);
     }
 }
