--- a/development/terminalfour/src/sass/msu-partials/_homepage-feature-caption.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-feature-caption.scss
@@ -1,6 +1,6 @@
 /* Homepage-feature-caption partial */
 #homepage-feature-caption {
-    padding: torem(100, $small-unit) percentage(1/$grid-columns);
+    padding: torem(50, $small-unit) percentage(1/$grid-columns) torem(60, $small-unit);
     .carousel-indicators {
         left: 10%;
         top: 1rem;
@@ -33,6 +33,9 @@
             padding-right: torem(12);
         }
     }
+}
+.homepage-feature-caption-item {
+    display: block;
 }
 .homepage-feature-caption-img {
     @include img-responsive ;
