--- a/development/terminalfour/src/sass/msu-partials/_homepage-second-nav.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-second-nav.scss
@@ -18,7 +18,7 @@ background-image:url(../media/RYOR_bg_extended.png);
 display: none;
 }
 
-.homepage-feature ul, {
+.homepage-feature ul {
   list-style-type: none;
   display: table;
   width: 100%;
