--- a/www-root/includes/homepage/homepage-feature-caption.html
+++ b/www-root/includes/homepage/homepage-feature-caption.html
@@ -1,33 +1,33 @@
 <section class="homepage-feature carousel t4-slide slide" id="homepage-feature-caption">
     <div class="carousel-inner">
         <!-- Carousel sample one -->
-        <div class="homepage-feature-caption-item item active">
+        <a href="#" class="homepage-feature-caption-item item active">
           <div class="col-xs-12 col-md-6 col-md-push-6">
             <img class="img-responsive" src="style-assets/media/placeholder-images/homepage-slide-img.png"
               alt="Great news story headline" />
           </div>
           <div class="col-xs-12 col-md-5 col-md-pull-5">
             <div class="side-container">
-              <h1 class="feature-heading">MSU Denver earns Hispanic-Serving Institution Status.</h1>
+              <h2 class="feature-heading">MSU Denver earns Hispanic-Serving Institution Status.</h2>
               <div class="tagline">That's <span>possible</span> here.</div>
             </div>
                 
           </div>
-        </div>
+        </a>
         <!-- Caurusel sample two -->
-        <div class="homepage-feature-caption-item item">
+        <a href="#" class="homepage-feature-caption-item item">
           <div class="col-xs-12 col-md-6 col-md-push-6"> 
             <img class="img-responsive" src="style-assets/media/placeholder-images/homepage-slide-img2.png"
               alt="Great news story headline" />
           </div>
             <div class="col-xs-12 col-md-5 col-md-pull-5">
                 <div class="side-container">
-                  <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take
-                    off.</h1>
+                  <h2 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take
+                    off.</h2>
                   <div class="tagline">That's <span>possible</span> here.</div>
                 </div>
             </div>
-        </div>
+          </a>
     </div>
     <ol class="carousel-indicators">
       <li data-target="#homepage-feature-caption" data-slide-to="0" class="active"></li>
