--- a/www-root/includes/homepage/homepage-news.html
+++ b/www-root/includes/homepage/homepage-news.html
@@ -1,7 +1,7 @@
     <!-- ** Homepage news ** -->
 <section class="homepage-feature" id="homepage-news">
     <div class="home-news-features">
-        <h1 class="feature-heading-large">RELEVANT. ESSENTIAL. DENVER.</h1>
+        <h2 class="feature-heading-large"><img src="style-assets/media/template-assets/RED-logo.svg" alt="">RELEVANT. ESSENTIAL. DENVER.</h2>
           <div class="news-features">
             <!-- regular featured news items -->
                      <div class="news-feature">
@@ -12,8 +12,8 @@
                                    alt="Great news story headline" />
                              </div>
                              <div class="news-feature-text">
-                                 <h2 class="feature-heading news-feature-heading">Chart topper</h2>
-                                 <h3 class="">Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h3>
+                                 <h3 class="feature-heading news-feature-heading">Chart topper</h3>
+                                 <h4>Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h4>
                              </div>
                              </a>
                      </div>
@@ -25,8 +25,8 @@
                                    alt="Great news story headline" />
                              </div>
                              <div class="news-feature-text">
-                                 <h2 class="feature-heading news-feature-heading">Redefining working class</h2>
-                                 <h3 class="">Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h3>
+                                 <h3 class="feature-heading news-feature-heading">Redefining working class</h3>
+                                 <h4>Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h4>
                              </div>
                              </a>
                      </div>
@@ -37,8 +37,8 @@
                                    alt="Great news story headline" />
                              </div>
                              <div class="news-feature-text">
-                                 <h2 class="feature-heading news-feature-heading">The man behind the mic</h2>
-                                 <h3 class="">Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h3>
+                                 <h3 class="feature-heading news-feature-heading">The man behind the mic</h3>
+                                 <h4 class="">Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h4>
                              </div>
                              </a>
                      </div><!-- ./ .news-feature-item -->
