Changes based on Mark Baldwin Feedback

--- a/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
@@ -16,14 +16,18 @@
   margin-left: -150px;
   width: 150px;
   position: fixed;
-  padding-top: 82px;
+  padding-top: 100px;
   top: 0;
   left: 150px;
   bottom: 0;
-  z-index: 9998;
   background: #fff;
   color:black;
   -webkit-overflow-scroll: touch
+}
+@media (max-width: 991px) {
+  #menu {
+    z-index: 9998;
+  }
 }
 #menu a {
   border: none;
@@ -63,7 +67,7 @@
 
 .menu-link {
   display: none;
-  top: 75px;
+  top: 96px;
   left: 10px;
   background: #002856;
   background: rgba(27, 85, 122, .5);
