--- a/development/terminalfour/src/html/includes/homepage/homepage-news.html
+++ b/development/terminalfour/src/html/includes/homepage/homepage-news.html
@@ -1,7 +1,9 @@
     <!-- ** Homepage news ** -->
 <section class="homepage-feature" id="homepage-news">
     <div class="home-news-features">
-        <h2 class="feature-heading-large"><img src="style-assets/media/template-assets/RED-logo.svg" alt="">RELEVANT. ESSENTIAL. DENVER.</h2>
+        <h2 class="feature-heading-large"><img src="style-assets/media/template-assets/RED-logo.svg" alt="">
+            RELEVANT. ESSENTIAL. DENVER.
+        </h2>
           <div class="news-features">
             <!-- regular featured news items -->
                      <div class="news-feature">
